Cleanned up folders; working version for 20kChallenge data

--- a/notebooks/Validator.ipynb
+++ b/notebooks/Validator.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a042bab2bf1f4bceb9e8f146ccd7acb8",
+       "model_id": "4312f8a84b224cbaa9069a08111f6933",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,18 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84f07b14f9764d06bddfd8ff8295d552",
+       "model_id": "aa60faac6a7842acb8a986fdb2cc1f75",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oVGV4dGFyZWEodmFsdWU9dSJTRUxFQ1QgUGF0aWVudElEIGFzIGlkLCAgUk9VTkQoQ0FTVChBZ2UgYXMgZGVjaW1hbCksMCkgYXMgYWdlLCDigKY=\n"
+       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oVGV4dGFyZWEodmFsdWU9dSdTRUxFQ1QgaWQgYXMgaWQsIHQgYXMgdCwgbiBhcyBuLCBtIGFzIG0sIHN0YWdlIGFzIHN0YWdlLCAgICAgZGHigKY=\n"
       ]
      },
      "metadata": {},
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "from r2rmlQueryEditor import R2RMLQueryEditor\n",
+    "from src.r2rmlQueryEditor import R2RMLQueryEditor\n",
     "\n",
     "r2rmlEditor = R2RMLQueryEditor(\"http://graphdb:7200/repositories/r2rml\", dbEngine)\n",
     "widgets.VBox(r2rmlEditor.runInterface())"
@@ -90,18 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SQL Columns:  [u'id' u'age' u'sex' u'clinical_t' u'clinical_n' u'survival_time'\n",
-      " u'vital_status' u'survival_2y']\n",
-      "RDF Columns:  ['patient' 'age' 'sex' 'cT' 'cN' 'survival_2y']\n",
-      "SQL Count:  10\n",
-      "RDF Count:  10\n"
+      "SQL Columns:  [u'id' u't' u'n' u'm' u'stage' u'date_of_diagnosis' u'date_of_fu'\n",
+      " u'vital_status']\n",
+      "RDF Columns:  ['patient' 'clinT' 'clinN' 'clinM' 'overallStage' 'diagnosisDate'\n",
+      " 'vitalStatusDate' 'vitalStatus']\n",
+      "SQL Count:  20\n",
+      "RDF Count:  20\n"
      ]
     }
    ],
@@ -111,26 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38b07ed886ce414f9e8f7effc57a01cf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "aW50ZXJhY3RpdmUoY2hpbGRyZW49KERyb3Bkb3duKGRlc2NyaXB0aW9uPXUneFNRTCcsIG9wdGlvbnM9KHUnaWQnLCB1J2FnZScsIHUnc2V4JywgdSdjbGluaWNhbF90JywgdSdjbGluaWNhbF/igKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "r2rmlEditor.comparisonEngine.interact(figsize=(18, 8))"
+    "#r2rmlEditor.comparisonEngine.interact(figsize=(18, 8))"
    ]
   },
   {
