--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -6,11 +6,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (manage_db.py, line 51)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"src/manage_db.py\"\u001b[0;36m, line \u001b[0;32m51\u001b[0m\n\u001b[0;31m    raise Exception(f'Unable to connect to the database: {e}')\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:rdflib:RDFLib Version: 4.2.1\n"
      ]
     }
    ],
@@ -22,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +31,7 @@
     "port = 5432\n",
     "user = 'postgres'\n",
     "password = 'postgres'\n",
-    "table = 'CORAL'\n",
+    "table = 'CORALDATA'\n",
     "columns = {\n",
     "    'id': 'text PRIMARY KEY',\n",
     "    't': 'text',\n",
@@ -43,33 +42,74 @@
     "    'date_of_fu': 'text',\n",
     "    'vital_status': 'text'\n",
     "}\n",
-    "file_path = '20k_sample_data.csv'"
+    "file_path = 'data/20k_sample_data.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert data to postgres database\n",
+    "# Create database\n",
     "postgres = ManageDB(\n",
-    "    dbname=dbname, host=host, port=port, user=user, password=password\n",
+    "    host=host, port=port, user=user, password=password\n",
     ")\n",
     "postgres.connect()\n",
+    "postgres.create_db(dbname=dbname)\n",
+    "postgres.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('T1', '2012-01-01', 'dead', '2015-01-01', 'I', 'M0', '1', 'N0')\n",
+      "('T2', '2013-03-05', 'dead', '2015-01-01', 'IA', 'M1', '2', 'N1')\n",
+      "('T3', '2014-04-16', 'alive', '2018-01-01', 'IB', 'M0', '3', 'N2')\n",
+      "('T4', '2015-05-06', 'alive', '2016-01-01', 'II', 'M1c', '4', 'N3')\n",
+      "('Tx', '2012-01-01', 'dead', '2015-01-01', 'IIA', 'Mx', '5', 'Nx')\n",
+      "('Tis', '2012-01-01', 'dead', '2015-01-01', 'IIB', 'M1a', '6', 'Nx')\n",
+      "('T1mi', '2012-01-01', 'dead', '2015-01-01', 'III', 'M1b', '7', 'N0')\n",
+      "('T1a', '2012-01-01', 'dead', '2015-01-01', 'IIIA', 'Mx', '8', 'N0')\n",
+      "('T1b', '2012-01-01', 'dead', '2015-01-01', 'IIIB', 'Mx', '9', 'N0')\n",
+      "('Tis', '2012-01-01', 'dead', '2015-01-01', '0', 'Mx', '10', 'N0')\n",
+      "Inserted data to postgres database\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Insert data to postgres database\n",
+    "postgres = ManageDB(\n",
+    "    host=host, port=port, user=user, password=password\n",
+    ")\n",
+    "postgres.connect(dbname=dbname)\n",
     "postgres.create_table(table=table, columns=columns)\n",
     "df = postgres.prepare_data(file_path=file_path, columns=columns.keys())\n",
     "postgres.insert_data(table=table, columns=df.columns, df=df)\n",
     "postgres.show_table(table=table)\n",
     "postgres.close()\n",
-    "print(f'Inserted data to postgres database')"
+    "print('Inserted data to postgres database')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded RDF mapping\n"
+     ]
+    }
+   ],
    "source": [
     "# Load RDF mapping file\n",
     "graphdb_base_url = 'http://graphdb:7200/repositories/'\n",
@@ -82,7 +122,7 @@
     "r2rml.drop_rdf_mappings()\n",
     "r2rml.load_rdf_mapping()\n",
     "r2rml.insert_rdf_mapping()\n",
-    "print(f'Loaded RDF mapping')"
+    "print('Loaded RDF mapping')"
    ]
   },
   {
