--- a/notebooks/termMapping.ipynb
+++ b/notebooks/termMapping.ipynb
@@ -9,14 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:rdflib:RDFLib Version: 4.2.1\n"
+     ]
+    }
+   ],
    "source": [
     "#initialize terminology mapping service\n",
-    "from TermMappingService import TermMappingService\n",
+    "from src.TermMappingService import TermMappingService\n",
     "import ipywidgets as widgets\n",
     "tms = TermMappingService(\"http://graphdb:7200/repositories/data\",\n",
     "                         \"https://raw.githubusercontent.com/RadiationOncologyOntology/ROO/d017a652c33ba7c90bf1768a508aef14fd52ece3/owl/ROO.owl\")"
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -39,16 +47,45 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed6f424a98354832bb4d94c0b3273ada",
+       "model_id": "7182ae0f031645049c111712b03263dd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox()"
+       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oVGV4dCh2YWx1ZT11JzIwMTItMDEtMDEnLCBkZXNjcmlwdGlvbj11J0RhdGUnLCBkaXNhYmxlZD1UcnVlLCBzdHlsZT1EZXNjcmlwdGlvblPigKY=\n"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n",
+      "Mapping saved, please reload the page to see the effect.\n"
+     ]
     }
    ],
    "source": [
@@ -70,12 +107,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b42af21373fb4325939186945b833672",
+       "model_id": "55ea94efc645404e842b20f1438e8eb5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox()"
+       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oVGV4dCh2YWx1ZT11J2FsaXZlJywgZGVzY3JpcHRpb249dSdWaXRhbCBTdGF0dXM6JywgZGlzYWJsZWQ9VHJ1ZSwgc3R5bGU9RGVzY3JpcHTigKY=\n"
       ]
      },
      "metadata": {},
